--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     </div>
 
     <div style="display: inline-block; width: 46%; margin-left: 27%; margin-top: 100px;">
-        <img style="width: 40%; float: left;" src="./img/labirintas.png" alt="">
+        <img style="width: 40%; float: left; margin-top: -8%" src="./img/labirintas.png" alt="">
         <div style="width: 50%; float: left; margin-left: 10%;">
-            <h1 style="font-size: 170px;margin: 0;color: green;">404</h1>
-            <p style="font-size: 24px;line-height: 1.2em; color: green;">Looks like you are in a.maze</p>
-            <p style="font-size: 22px; line-height: 1.2em;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            <h1 style="font-size: 160px;margin: 0; margin-top: -10%; color: rgb(27, 72, 13); font-family: sans-serif;">404</h1>
+            <p style="font-size: 24px;line-height: 1.2em; color: rgb(93, 120, 89);">Looks like you are in a.maze</p>
+            <p style="font-size: 20px; line-height: 1.2em; color: rgb(159, 159, 159);">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 Natus labore quod, quae recusandae debitis
                 maxime.</p>
+            <a style="box-shadow: 0 4px 9px 2px rgba(186, 231, 176, 0.4);  background-color: rgb(98, 173, 78); color: white; text-decoration: none; padding: 20px; display: inline-block; padding-left: 40px; padding-right: 40px;" href="#">Go back home</a>
 
         </div>
     </div>
@@ -48,14 +49,17 @@ display: inline;         // elgiasi kaip tekstas
 display: none;          // elementas nerodomas
 display: inline-block; //mix tarp block ir inline
 
-float: left;           // priverstinis elemento statymas horizontaliai
+float: left;         // priverstinis elemento statymas horizontaliai
 float: rigth;
 
 margin: 0             // atstumas iki aplinkiniu elementu visomis kryptimis
 margin-top: 0  
-margin-botton
-margin-left          // reikia atsistumti nuo kaires, o ne i kuria puse
-margin-rigth
+margin-botton:
+margin-left:          // reikia atsistumti nuo kaires, o ne i kuria puse
+margin-rigth:
+
+padding: 0;         // atstumas visomis kryptimis nuo elemento turinio iki to paties elemento krastu
+
 
 line-heigth: 30px;
 
